# multimodal

./: LICENSE  README.md  Readme  activate_env.sh  main.py  pyproject.toml  requirements.txt  setup.py
configs/: etl.yml  tasks.yml  train_primary.yml  train_secondary_aki.yml
etl/: __init__.py  contracts.py  extract.py  load.py  transform.py  validators.py
eval/: __init__.py  cv_loco.py  plotting.py  reporting.py  stats_tests.py
features/: __init__.py  build_img_embed.py  build_t0.py  radiomics.py  utils.py
models/: __init__.py  clinical_baselines.py  fusion_early.py  fusion_intermediate.py  fusion_late.py  train.py  utils.py
tests/: __init__.py
tests/unit/: test_etl.py
